website/versioned_docs/version-2.0.x/reference/datatypes/accelerators.md
---
title: 'Accelerator Data Types'
sidebar_label: 'Accelerator Data Types'
---

Spice adheres to Apache Arrow data [types](https://docs.rs/arrow/latest/arrow/datatypes/index.html). Data accelerators do not support all Arrow data types. The table below outlines the data type compatibility for each accelerator, and datatype used within the accelerator.

| Arrow Type              | Description                                                                  | [Spice Cayenne (Vortex)](https://github.com/vortex-data/vortex) | [DuckDB](https://duckdb.org/docs/sql/data_types/overview) | [SQLite](https://sqlite.org/datatype3.html) | [Postgres](https://www.postgresql.org/docs/current/datatype.html#DATATYPE-TABLE) |
| ----------------------- | ---------------------------------------------------------------------------- | --------------------------------------------------------------- | --------------------------------------------------------- | ------------------------------------------- | -------------------------------------------------------------------------------- |
| na                      | A NULL type having no physical storage.                                      | `Null`                                                          |                                                           |                                             |                                                                                  |
| bool                    | Boolean as 1 bit, LSB bit-packed ordering.                                   | `Bool`                                                          | `BOOLEAN`                                                 | `BOOL`                                      | `BOOL`                                                                           |
| uint8                   | Unsigned 8-bit little-endian integer.                                        | `Primitive(U8)`                                                 | `TINYINT`                                                 | `TINYINT`                                   | `SMALLINT`                                                                       |
| int8                    | Signed 8-bit little-endian integer.                                          | `Primitive(I8)`                                                 | `TINYINT`                                                 | `TINYINT`                                   | `SMALLINT`                                                                       |
| uint16                  | Unsigned 16-bit little-endian integer.                                       | `Primitive(U16)`                                                | `SMALLINT`                                                | `SMALLINT`                                  | `SMALLINT`                                                                       |
| int16                   | Signed 16-bit little-endian integer.                                         | `Primitive(I16)`                                                | `SMALLINT`                                                | `SMALLINT`                                  | `SMALLINT`                                                                       |
| uint32                  | Unsigned 32-bit little-endian integer.                                       | `Primitive(U32)`                                                | `INTEGER`                                                 | `INT`                                       | `INTEGER`                                                                        |
| int32                   | Signed 32-bit little-endian integer.                                         | `Primitive(I32)`                                                | `INTEGER`                                                 | `INT`                                       | `INTEGER`                                                                        |
| uint64                  | Unsigned 64-bit little-endian integer.                                       | `Primitive(U64)`                                                | `BIGINT`                                                  | `BIGINT`                                    | `BIGINT`                                                                         |
| int64                   | Signed 64-bit little-endian integer.                                         | `Primitive(I64)`                                                | `BIGINT`                                                  | `BIGINT`                                    | `BIGINT`                                                                         |
| half_float              | 2-byte floating point value                                                  | `Primitive(F32)`                                                |                                                           |                                             |                                                                                  |
| float                   | 4-byte floating point value                                                  | `Primitive(F32)`                                                | `FLOAT`                                                   | `FLOAT`                                     | `REAL`                                                                           |
| double                  | 8-byte floating point value                                                  | `Primitive(F64)`                                                | `DOUBLE`                                                  | `DOUBLE`                                    | `DOUBLE PRECISION`                                                               |
| string                  | UTF8 variable-length string as List\<Char\>                                  | `Utf8`                                                          | `VARCHAR`                                                 | `TEXT`                                      | `TEXT`                                                                           |
| binary                  | Variable-length bytes (no guarantee of UTF8-ness)                            | `Binary`                                                        |                                                           |                                             |                                                                                  |
| fixed_size_binary       | Each value has equal bytes of binary.                                        |                                                                 |                                                           |                                             |                                                                                  |
| date32                  | int32_t days since the UNIX epoch                                            | `Extension(Date)`                                               | `DATE`                                                    | `DATE`                                      |                                                                                  |
| date64                  | int64_t milliseconds since the UNIX epoch                                    | `Extension(Date)`                                               | `DATE`                                                    | `TIMESTAMP`                                 |                                                                                  |
| timestamp               | Exact timestamp encoded with int64 since UNIX epoch, seconds or milliseconds | `Extension(Timestamp)`                                          | `TIMESTAMP_S`, `TIMESTAMP_MS`                             | `TIMESTAMP`                                 | `TIMESTAMP`                                                                      |
| time32                  | Time as signed 32-bit integer, seconds or milliseconds since midnight.       | `Extension(Time)`                                               | `TIME`                                                    | `TIME`                                      |                                                                                  |
| time64                  | Time as signed 64-bit integer, microseconds or nanoseconds since midnight.   | `Extension(Time)`                                               | `TIME`                                                    | `TIME`                                      |                                                                                  |
| interval_months         | YEAR_MONTH interval in SQL style.                                            |                                                                 |                                                           |                                             |                                                                                  |
| interval_day_time       | DAY_TIME interval in SQL style.                                              |                                                                 |                                                           |                                             |                                                                                  |
| decimal128              | Precision- and scale-based decimal type with 128 bits.                       | `Decimal`                                                       | `DOUBLE`                                                  | `DECIMAL(38, 10)`                           | `DECIMAL(38, 10)`                                                                |
| decimal                 | Defined for backward-compatibility.                                          | `Decimal`                                                       |                                                           |                                             |                                                                                  |
| decimal256              | Precision- and scale-based decimal type with 256 bits.                       | `Decimal`                                                       |                                                           |                                             |                                                                                  |
| list                    | A list of some logical data type.                                            | `List`                                                          |                                                           |                                             | `TYPE[]`                                                                         |
| struct                  | Struct of logical types.                                                     | `Struct`                                                        |                                                           |                                             |                                                                                  |
| sparse_union            | Sparse unions of logical types.                                              |                                                                 |                                                           |                                             |                                                                                  |
| dense_union             | Dense unions of logical types.                                               |                                                                 |                                                           |                                             |                                                                                  |
| dictionary              | Dictionary-encoded type,                                                     |                                                                 |                                                           |                                             |                                                                                  |
| map                     | Map, a repeated struct logical type.                                         |                                                                 |                                                           |                                             |                                                                                  |
| extension               | Custom data type, implemented by user.                                       | `Extension`                                                     |                                                           |                                             |                                                                                  |
| fixed_size_list         | Fixed size list of some logical type.                                        | `FixedSizeList`                                                 |                                                           |                                             |                                                                                  |
| duration                | Elapsed time in seconds, milliseconds, microseconds or nanoseconds.          |                                                                 |                                                           |                                             |                                                                                  |
| large_string            | Like STRING, but with 64-bit offsets.                                        | `Utf8`                                                          |                                                           |                                             |                                                                                  |
| large_binary            | Like BINARY, but with 64-bit offsets.                                        | `Binary`                                                        |                                                           |                                             |                                                                                  |
| large_list              | Like LIST, but with 64-bit offsets.                                          | `List`                                                          |                                                           |                                             |                                                                                  |
| interval_month_day_nano | Calendar interval type with three fields.                                    |                                                                 |                                                           |                                             |                                                                                  |
| run_end_encoded         | Run-end encoded data.                                                        |                                                                 |                                                           |                                             |                                                                                  |
| string_view             | UTF8 view type with 4-byte prefix & inline small string optimization.        | `Utf8`                                                          |                                                           |                                             |                                                                                  |
| binary_view             | Bytes view type with 4-byte prefix and inline small string optimization.     | `Binary`                                                        |                                                           |                                             |                                                                                  |
| list_view               | A list of some logical data type represented by offset and size.             |                                                                 |                                                           |                                             |                                                                                  |
| large_list_view         | Like LIST_VIEW, but with 64-bit offsets and sizes.                           |                                                                 |                                                           |                                             |                                                                                  |

Note: Where `TYPE` is used (e.g. `TYPE[]`), it refers an established supported type for the specific data accelerator (e.g. `INTEGER[]`). Spice Cayenne (Vortex) provides zero-copy compatibility with Apache Arrow and supports most Arrow types through its logical type system. A `half_float` (Arrow `Float16`) column is widened to `Float32` before it is written, so it is stored — and read back — as `Primitive(F32)`; Vortex has no 2-byte float type.
